[metadata]
name = ygfans
version = attr: ygfans.__version__
url = https://gitee.com/Yuzu9/ygfans_frame
author = yuzu
author_email = edonblay@gmail.com
maintainer = yuzu
maintainer_email = edonblay@gmail.com
description = frame tools

[options]
packages = find:
python_requires = >= 3.8

[options.packages.find]
where = ygfans
include =
    ygfans
    ygfans.*

# # NOTE: cli 脚本
# [options.entry_points]
# console_scripts =
#     ygfans = ygfans.cli:main
