[metadata]
name = yuzu_tools
version = attr: yuzu_tools.__version__
url = https://github.com/YuzuWiki/yuzu-tools
author = YuzuWiki
author_email = like09th@gmail.com
maintainer = YuzuWiki
maintainer_email = like09th@gmail.com
description = frame tools

[options]
packages = find:
python_requires = >= 3.8

[options.packages.find]
where = yuzu_tools
include =
    yuzu_tools
    yuzu_tools.*

# # NOTE: cli 脚本
# [options.entry_points]
# console_scripts =
#     yuzu_tools = yuzu_tools.cli:main
